# rp2040_testdata

./: .gitmodules  CMakeLists.txt  README.md
main/: board.c  board.h  main.c  rp2040_clock.c  rp2040_clock.h  tusb_config.h
pico测试数据校验/: import re_lixian.py  new_test.py  online_cheek_data.py  pico_Serial_velocity.py  pico_testdata.m  testdata_time.xlsx
